--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.19",
+    "nodemailer": "^6.4.10",
     "validator": "^13.1.1"
   }
 }
